PR6416: extend probing blacklist with more init/exit sections